roles/mailman: use https for PUBLIC_ARCHIVE_URL

--- a/roles/mailman2/templates/mm_cfg.py.j2
+++ b/roles/mailman2/templates/mm_cfg.py.j2
@@ -60,6 +60,7 @@ MAILMAN_SITE_LIST = 'mailman'
 # accordingly (Alias and ScriptAlias directives in most httpds)
 DEFAULT_URL_PATTERN = 'https://%s/mailman/'
 IMAGE_LOGOS         = '/images/mailman/'
+PUBLIC_ARCHIVE_URL  = 'https://%(hostname)s/pipermail/%(listname)s/'
 
 #-------------------------------------------------------------
 # Default domain for email addresses of newly created MLs
