roles/postfix: add alias for alastair, and change secretary@ alias to match power

--- a/roles/postfix/templates/aliases.j2
+++ b/roles/postfix/templates/aliases.j2
@@ -12,7 +12,7 @@ vicechair: committee
 vc: vicechair
 vp: vicechair
 vicepresident: vicechair
-secretary: p@delfante.it
+secretary: committee
 membership: secretary
 treasurer: committee
 
@@ -35,3 +35,6 @@ twitter: committee
 committee-spacecubed: committee
 tickets: committee
 ticket: tickets
+
+# Account not yet migrated
+alastair: alastair@power.plug.org.au
