--- a/roles/spamassassin/templates/local.cf.j2
+++ b/roles/spamassassin/templates/local.cf.j2
@@ -9,13 +9,14 @@
 
 #   Add *****SPAM***** to the Subject header of spam e-mails
 #
-rewrite_header Subject *****SPAM*****
+# rewrite_header Subject *****SPAM*****
 
 
 #   Save spam messages as a message/rfc822 MIME attachment instead of
 #   modifying the original message (0: off, 2: use text/plain instead)
 #
 # report_safe 1
+report_safe 0
 
 
 #   Set which networks or hosts are considered 'trusted' by your mail
