--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,9 +1,11 @@
 # {{ ansible_managed }}
-# Based on Debian 9 nginx
+# Based on Debian 13 nginx
 
 user www-data;
 worker_processes auto;
+worker_cpu_affinity auto;
 pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
@@ -19,10 +21,8 @@ http {
 
 	sendfile on;
 	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off; # Recommended practice is to turn this off
 
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
@@ -34,22 +34,20 @@ http {
 	# SSL Settings
 	##
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
+	ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3 (POODLE), TLS 1.0, 1.1
+	ssl_prefer_server_ciphers off; # Don't force server cipher order.
 
 	##
 	# Logging Settings
 	##
 
 	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
 
 	##
 	# Gzip Settings
 	##
 
 	gzip on;
-	gzip_disable "msie6";
 
 	# gzip_vary on;
 	# gzip_proxied any;
@@ -70,17 +68,17 @@ http {
 #mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
+#
 #	# auth_http localhost/auth.php;
 #	# pop3_capabilities "TOP" "USER";
 #	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
+#
 #	server {
 #		listen     localhost:110;
 #		protocol   pop3;
 #		proxy      on;
 #	}
-# 
+#
 #	server {
 #		listen     localhost:143;
 #		protocol   imap;
