roles/postfix: add plug.linux.org.au to mydestination, and drop a few other redundant destinations

--- a/roles/postfix/templates/main.cf.j2
+++ b/roles/postfix/templates/main.cf.j2
@@ -40,7 +40,7 @@ myhostname = iec.plug.org.au
 alias_maps = hash:/etc/aliases, hash:/var/lib/mailman/data/aliases
 alias_database = hash:/etc/aliases
 myorigin = /etc/mailname
-mydestination = $myhostname, plug.org.au, po1.plug.org.au, iec.plug.org.au, iec.po1.plug.org.au, localhost.plug.org.au, localhost.po1.plug.org.au, localhost
+mydestination = $myhostname, plug.org.au, plug.linux.org.au, po1.plug.org.au, localhost
 # This is possibly better:
 # mydestination = $myhostname, localhost.$mydomain, localhost, $mydomain
 relayhost = 
