roles/postfix: provide the full chain certificate file to postfix

--- a/roles/postfix/templates/main.cf.j2
+++ b/roles/postfix/templates/main.cf.j2
@@ -25,7 +25,7 @@ readme_directory = no
 compatibility_level = 3.6
 
 # TLS parameters
-smtpd_tls_cert_file = /etc/letsencrypt/live/mail.plug.org.au/cert.pem
+smtpd_tls_cert_file = /etc/letsencrypt/live/mail.plug.org.au/fullchain.pem
 smtpd_tls_key_file = /etc/letsencrypt/live/mail.plug.org.au/privkey.pem
 
 smtpd_tls_security_level = may
