--- a/roles/postfix/templates/main.cf.j2
+++ b/roles/postfix/templates/main.cf.j2
@@ -108,9 +108,10 @@ non_smtpd_milters = unix:opendkim/opendkim.sock
 # Configuration for talking with SMTP servers that rate limit us
 transport_maps = hash:/etc/postfix/transport
 slow_smtp_initial_destination_concurrency = 1
-slow_smtp_destination_concurrency_limit = 4
+slow_smtp_destination_concurrency_limit = 1
 slow_smtp_destination_recipient_limit = 2
-slow_smtp_destination_rate_delay = 1s
+#slow_smtp_destination_rate_delay = 120s
+slow_smtp_transport_rate_delay = 10m
 
 #####################################
 # Things we might be able to remove #
